[package]
name = "fast-async-mutex"
version = "0.6.2"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "It is a lib which provide asynchronous locking mechanisms (Mutex, RwLock, OrderedMutex and OrderedRwLock)"
license = "Apache-2.0/MIT"
keywords = ["mutex", "lock", "thread", "spin", "concurrency"]
categories = ["concurrency"]
readme = "README.md"
documentation = "https://docs.rs/fast-async-mutex/"
repository = "https://github.com/Mnwa/fast-async-mutex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time"] }
futures = "0.3"