[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.4"
fast-async-mutex = "0.3.4"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time", "sync"] }